Correct output path for pilot data

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "repo_url = \"https://github.com/tamarinde/ResponsibleSupervision/tree/main/Pilot-responsible-supervision/data/spreadsheets\"\n",
-    "csv_path = \"output/sups_pilot.csv\"\n",
+    "csv_path = \"data/output/sups_pilot.csv\"\n",
     "\n",
     "try:\n",
     "    # Attempt to read the supervisors in the pilot dataset from csv_path\n",
@@ -180,17 +180,6 @@
     "# SOLUTION: I will just list all the author IDs here that I come across. We compare those with the IDs in the final dataset, and whenever we have a match we give the bonus points to that supervisor! \n",
     "\n",
     "# Still looking up all the supervisors in OA takes a while and some queries. So I should buffer the result to a csv and only "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyalex import Authors\n",
-    "\n",
-    "fetch_author_openalex_names_ids(\"van de beek, diederik\")"
    ]
   },
   {
