Enrich metadata in supervision data frame We now get a bunch of metadata on how contributors relate to the PhDs

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -170,16 +170,14 @@
     "try:\n",
     "    # Attempt to read the supervisors in the pilot dataset from csv_path\n",
     "    # If it fails, we get them again from GitHub\n",
-    "    supervisors_ids = get_supervisors_openalex_ids(repo_url, csv_path)\n",
+    "    supervisors_in_pilot_dataset = get_supervisors_openalex_ids(repo_url, csv_path)\n",
     "    print(\"Unique Supervisors with OpenAlex IDs:\")\n",
-    "    print(supervisors_ids)\n",
+    "    print(supervisors_in_pilot_dataset)\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n",
     "\n",
-    "# NOTE: The problem with this is that I am getting a lot of matches in OA with all the supervisors. But how do I match them with the spelling and ID I will find in my final dataset?\n",
-    "# SOLUTION: I will just list all the author IDs here that I come across. We compare those with the IDs in the final dataset, and whenever we have a match we give the bonus points to that supervisor! \n",
-    "\n",
-    "# Still looking up all the supervisors in OA takes a while and some queries. So I should buffer the result to a csv and only "
+    "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
+    "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset"
    ]
   },
   {
@@ -237,13 +235,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply the function to each row using DataFrame.apply\n",
-    "results_list = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1).tolist()\n",
+    "# Apply the function to each row\n",
+    "results_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
     "\n",
-    "# Convert the results into a DataFrame\n",
-    "results_df = pd.DataFrame(results_list)\n",
+    "# Filter out None results (in case some PhD candidates were not found)\n",
+    "results_dfs = [df for df in results_series if df is not None and not df.empty]\n",
     "\n",
-    "results_df.to_csv('data/output/matched_pairs.csv', index=False)"
+    "# Concatenate all DataFrames into one\n",
+    "final_results_df = pd.concat(results_dfs, ignore_index=True)\n",
+    "\n",
+    "final_results_df.to_csv('data/output/matched_pairs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_results_df"
    ]
   }
  ],
