Set AuthorRelations.supervisors_in_pilot_dataset in same code cell to avoid reset in notebook context

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -174,10 +174,7 @@
     "    print(\"Unique Supervisors with OpenAlex IDs:\")\n",
     "    print(supervisors_in_pilot_dataset)\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n",
-    "\n",
-    "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
-    "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset"
+    "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
@@ -235,6 +232,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
+    "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
+    "\n",
     "# Apply the function to each row\n",
     "results_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
     "\n",
