Better naming in producing extraction dataframe

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -193,7 +193,7 @@
     "# Test for one row\n",
     "\n",
     "if False:\n",
-    "    # Assume we are working with the first row of the DataFrame\n",
+    "    # First row of the DataFrame\n",
     "    row = pubs_df.iloc[0]\n",
     "\n",
     "    # Extract necessary fields\n",
@@ -219,7 +219,7 @@
     "    author_relations.search_phd_candidate(criteria='title')\n",
     "\n",
     "    # Find potential supervisors among the contributors\n",
-    "    author_relations.find_potential_supervisors()\n",
+    "    author_relations.collect_supervision_metadata()\n",
     "\n",
     "    # Get the OpenAlex ID pairs\n",
     "    results = author_relations.get_results()\n",
@@ -236,24 +236,17 @@
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row\n",
-    "results_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
+    "extraction_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
     "\n",
     "# Filter out None results (in case some PhD candidates were not found)\n",
-    "results_dfs = [df for df in results_series if df is not None and not df.empty]\n",
+    "# results_dfs = [df for df in results_series if df is not None and not df.empty]\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
-    "final_results_df = pd.concat(results_dfs, ignore_index=True)\n",
+    "extraction_df = pd.concat(extraction_series, ignore_index=True)\n",
     "\n",
-    "final_results_df.to_csv('data/output/matched_pairs.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_results_df"
+    "extraction_df.to_csv('data/output/matched_pairs.csv', index=False)\n",
+    "\n",
+    "extraction_df"
    ]
   }
  ],
