Convert series to list to allow concatenation to df

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -131,9 +131,9 @@
     "else:\n",
     "    n_sample = NROWS\n",
     "    \n",
-    "#pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
+    "pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
     " \n",
-    "pubs_df = pubs_df.head(NROWS) # use head for now because we actually do find some of these PhDs\n",
+    "#pubs_df = pubs_df.head(NROWS) # use head for now because we actually do find some of these PhDs\n",
     "    \n",
     "pubs_df"
    ]
@@ -238,11 +238,8 @@
     "# Apply the function to each row\n",
     "extraction_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
     "\n",
-    "# Filter out None results (in case some PhD candidates were not found)\n",
-    "# results_dfs = [df for df in results_series if df is not None and not df.empty]\n",
-    "\n",
     "# Concatenate all DataFrames into one\n",
-    "extraction_df = pd.concat(extraction_series, ignore_index=True)\n",
+    "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
     "\n",
     "extraction_df.to_csv('data/output/matched_pairs.csv', index=False)\n",
     "\n",
