Take a random sample of Phds of the same size as the biomedical dataset

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -49,7 +49,9 @@
    "outputs": [],
    "source": [
     "# Number of rows to read of the full dataset.\n",
-    "NROWS = 25 # None for all"
+    "# None for all\n",
+    "#NROWS = 25 # Quick test\n",
+    "NROWS = 1856 # Same size as biomedical subset"
    ]
   },
   {
