Make either the default match for phds

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -35,6 +35,7 @@
     "import pyalex # importing full package seems to be the only way to call `pyalex.config.email = email_address`\n",
     "import pandas as pd\n",
     "from os import path\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
@@ -50,7 +51,7 @@
    "source": [
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
-    "#NROWS = 25 # Quick test\n",
+    "#NROWS = 10 # Quick test\n",
     "NROWS = 1856 # Same size as biomedical subset"
    ]
   },
@@ -92,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get contact email adress from file\n",
+    "# Get contact email address from file\n",
     "email_file_path = 'contact_email.txt'\n",
     "\n",
     "if path.isfile(email_file_path):\n",
@@ -238,7 +239,7 @@
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row\n",
-    "extraction_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1)\n",
+    "extraction_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1, args=(\"either\",))\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
     "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
@@ -246,6 +247,32 @@
     "extraction_df.to_csv('data/output/matched_pairs.csv', index=False)\n",
     "\n",
     "extraction_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure we only have one row per PhD for counting how they were confirmed\n",
+    "count_df = extraction_df[['phd_name', 'phd_match_by']].drop_duplicates(subset='phd_name')\n",
+    "\n",
+    "# Replace NaN in 'phd_match_by' with 'Not confirmed'\n",
+    "count_df['phd_match_by'] = count_df['phd_match_by'].fillna('Not confirmed')\n",
+    "\n",
+    "# Count how many PhDs per match type\n",
+    "match_counts = count_df['phd_match_by'].value_counts()\n",
+    "\n",
+    "# Create a bar plot\n",
+    "match_counts.plot(kind='bar')"
    ]
   }
  ],
