Flesh out test for dry run of title or affiliation match only

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -195,15 +195,17 @@
    "source": [
     "# Test for one row\n",
     "\n",
-    "if False:\n",
+    "if True:\n",
     "    # First row of the DataFrame\n",
     "    row = pubs_df.iloc[0]\n",
     "\n",
     "    # Extract necessary fields\n",
-    "    phd_name = row['phd_name']\n",
-    "    title = row['title']\n",
-    "    year = int(row['year'])\n",
-    "    institution = row['institution']\n",
+    "    phd_name = \"Selahattin Danisman\"\n",
+    "    title = \"Something completely different\" # fake title\n",
+    "    title = \"Transcriptional networks of TCP transcription factors in Arabidopsis development\"\n",
+    "    year = int(1990) # fake year\n",
+    "    year = int(2011)\n",
+    "    institution = \"Wageningen University & Research\"\n",
     "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row[f'contributor_{i}'])]\n",
     "\n",
     "    # Create an instance of AuthorRelations with desired verbosity ('NONE', 'MEDIUM', 'DETAILED')\n",
