Create a functional test case for PhD matching

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -195,16 +195,16 @@
    "source": [
     "# Test for one row\n",
     "\n",
-    "if True:\n",
+    "if False:\n",
     "    # First row of the DataFrame\n",
     "    row = pubs_df.iloc[0]\n",
     "\n",
     "    # Extract necessary fields\n",
     "    phd_name = \"Selahattin Danisman\"\n",
-    "    title = \"Something completely different\" # fake title\n",
+    "    #title = \"Something completely different\" # fake title\n",
     "    title = \"Transcriptional networks of TCP transcription factors in Arabidopsis development\"\n",
-    "    year = int(1990) # fake year\n",
-    "    year = int(2011)\n",
+    "    #year = int(1990) # fake year\n",
+    "    year = int(2011) # actual year\n",
     "    institution = \"Wageningen University & Research\"\n",
     "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row[f'contributor_{i}'])]\n",
     "\n",
@@ -221,7 +221,7 @@
     "    )\n",
     "\n",
     "    # Search for the PhD candidate using both criteria\n",
-    "    author_relations.search_phd_candidate(criteria='title')\n",
+    "    author_relations.search_phd_candidate(criteria='either')\n",
     "\n",
     "    # Find potential supervisors among the contributors\n",
     "    author_relations.collect_supervision_metadata()\n",
