Add progress bar and improve plot

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -36,11 +36,15 @@
     "import pandas as pd\n",
     "from os import path\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.io_helpers import fetch_supervisors_from_pilot_dataset\n",
-    "from src.clean_names_helpers import format_name_to_lastname_firstname"
+    "from src.clean_names_helpers import format_name_to_lastname_firstname\n",
+    "\n",
+    "# Initialize tqdm for progress bars\n",
+    "tqdm.pandas()"
    ]
   },
   {
@@ -237,11 +241,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify PhD matching criterion\n",
+    "criterion=\"either\"\n",
+    "\n",
     "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row\n",
-    "extraction_series = pubs_df.apply(find_phd_and_supervisors_in_row, axis=1, args=(\"either\",))\n",
+    "extraction_series = pubs_df.progress_apply(\n",
+    "    find_phd_and_supervisors_in_row,\n",
+    "    axis=1,\n",
+    "    args=(criterion,) # PhD matching criterion\n",
+    ")\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
     "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
@@ -264,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure we only have one row per PhD for counting how they were confirmed\n",
+    "# Ensure only one row per PhD for counting how they were confirmed\n",
     "count_df = extraction_df[['phd_name', 'phd_match_by']].drop_duplicates(subset='phd_name')\n",
     "\n",
     "# Replace NaN in 'phd_match_by' with 'Not confirmed'\n",
@@ -274,7 +285,18 @@
     "match_counts = count_df['phd_match_by'].value_counts()\n",
     "\n",
     "# Create a bar plot\n",
-    "match_counts.plot(kind='bar')"
+    "ax = match_counts.plot(kind='bar')\n",
+    "\n",
+    "# Add a legend specifying the matching criterion\n",
+    "ax.legend([f'PhD matching by \"{criterion}\"'], loc=\"upper right\")\n",
+    "\n",
+    "# Add labels and title for clarity\n",
+    "plt.xlabel(\"Match Type\")\n",
+    "plt.ylabel(\"Number of PhDs\")\n",
+    "plt.title(\"PhD Matching Confirmation by Type\")\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n"
    ]
   }
  ],
