--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -55,8 +55,9 @@
    "source": [
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
-    "#NROWS = 10 # Quick test\n",
-    "NROWS = 1856 # Same size as biomedical subset"
+    "NROWS = 25 # Quick test\n",
+    "#NROWS = 1856 # Same size as biomedical subset\n",
+    "#NROWS = None # Full dataset"
    ]
   },
   {
@@ -139,8 +140,6 @@
     "    n_sample = NROWS\n",
     "    \n",
     "pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
-    " \n",
-    "#pubs_df = pubs_df.head(NROWS) # use head for now because we actually do find some of these PhDs\n",
     "    \n",
     "pubs_df"
    ]
@@ -198,18 +197,17 @@
    "outputs": [],
    "source": [
     "# Test for one row\n",
-    "\n",
-    "if False:\n",
+    "if True:\n",
     "    # First row of the DataFrame\n",
     "    row = pubs_df.iloc[0]\n",
     "\n",
     "    # Extract necessary fields\n",
-    "    phd_name = \"Selahattin Danisman\"\n",
+    "    phd_name = \"Lotte Kok\"\n",
     "    #title = \"Something completely different\" # fake title\n",
-    "    title = \"Transcriptional networks of TCP transcription factors in Arabidopsis development\"\n",
-    "    #year = int(1990) # fake year\n",
-    "    year = int(2011) # actual year\n",
-    "    institution = \"Wageningen University & Research\"\n",
+    "    title = \"Psychopathology after cardiac surgery and intensive care treatment\"\n",
+    "    #year = int(0) # fake year\n",
+    "    year = int(2018) # actual year\n",
+    "    institution = \"Maastricht University Medical Centre\"\n",
     "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row[f'contributor_{i}'])]\n",
     "\n",
     "    # Create an instance of AuthorRelations with desired verbosity ('NONE', 'MEDIUM', 'DETAILED')\n",
