Make bigger sample 2000 entries

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -56,7 +56,7 @@
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
     "NROWS = 25 # Quick test\n",
-    "#NROWS = 1856 # Same size as biomedical subset\n",
+    "NROWS = 2000 # The biomedical subset had 1856 phds, but let's keep the change\n",
     "#NROWS = None # Full dataset"
    ]
   },
