Add test for what are illegal characters

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -13,8 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids"
+    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
+    "\n",
+    "from pyalex import Works\n",
+    "from src.io_helpers import remove_commas"
    ]
   },
   {
@@ -31,9 +33,9 @@
    "outputs": [],
    "source": [
     "# Get necessary fields\n",
-    "phd_name = \"Buursma, Albert\"\n",
-    "title = \"Something completely different\" # fake title\n",
-    "#title = \"Dese bekommerlijke tijden: armenzorg, armen en armoede in de stad Groningen 1594-1795\"\n",
+    "phd_name = \"Pandu Permana, R.\"\n",
+    "#title = \"Something completely different\" # fake title\n",
+    "title = \"Economic development environmental stress and sustainability in Indonesia. A case study on community transformation and local resource use in Berau East Kalimantan\"\n",
     "#year = int(0) # fake year\n",
     "year = int(2009) # actual year\n",
     "institution = \"University of Groningen\"\n",
@@ -60,6 +62,24 @@
     "# Get the OpenAlex ID pairs\n",
     "results = author_relations.get_results()\n",
     "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Real title with commas and other special characters\n",
+    "title = \"'Dese bekommerlijke tijden': armenzorg, armen en armoede in de stad Groningen 1594-1795\"\n",
+    "\n",
+    "title_clean = remove_commas(title)\n",
+    "\n",
+    "print(title_clean)\n",
+    "\n",
+    "results = Works().search_filter(title=title_clean).get()\n",
+    "\n",
+    "results"
    ]
   }
  ],
