Remove commas from work title

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
-    "from src.io_helpers import fetch_supervisors_from_pilot_dataset\n",
+    "from src.io_helpers import remove_commas\n",
     "from src.clean_names_helpers import format_name_to_lastname_firstname\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
@@ -55,7 +55,7 @@
    "source": [
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
-    "NROWS = 25 # Quick test\n",
+    "#NROWS = 25 # Quick test\n",
     "NROWS = 2000 # The biomedical subset had 1856 phds, but let's keep the change\n",
     "#NROWS = None # Full dataset"
    ]
@@ -152,6 +152,10 @@
    "source": [
     "# replace institution abbreviation with names that can be found in OpenAlex\n",
     "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution')\n",
+    "pubs_unabbrev_df\n",
+    "\n",
+    "# remove illegal characters from title\n",
+    "pubs_unabbrev_df[\"title\"] = pubs_unabbrev_df[\"title\"].apply(remove_commas)\n",
     "pubs_unabbrev_df"
    ]
   },
@@ -196,49 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test for one row\n",
-    "if True:\n",
-    "    # First row of the DataFrame\n",
-    "    row = pubs_df.iloc[0]\n",
-    "\n",
-    "    # Extract necessary fields\n",
-    "    phd_name = \"Lotte Kok\"\n",
-    "    #title = \"Something completely different\" # fake title\n",
-    "    title = \"Psychopathology after cardiac surgery and intensive care treatment\"\n",
-    "    #year = int(0) # fake year\n",
-    "    year = int(2018) # actual year\n",
-    "    institution = \"Maastricht University Medical Centre\"\n",
-    "    contributors = [row[f'contributor_{i}'] for i in range(1, 11) if pd.notna(row[f'contributor_{i}'])]\n",
-    "\n",
-    "    # Create an instance of AuthorRelations with desired verbosity ('NONE', 'MEDIUM', 'DETAILED')\n",
-    "    years_tolerance = -1  # years tolerance\n",
-    "    author_relations = AuthorRelations(\n",
-    "        phd_name=phd_name,\n",
-    "        title=title,\n",
-    "        year=year,\n",
-    "        institution=institution,\n",
-    "        contributors=contributors,\n",
-    "        years_tolerance=years_tolerance,\n",
-    "        verbosity='DEBUG'\n",
-    "    )\n",
-    "\n",
-    "    # Search for the PhD candidate using both criteria\n",
-    "    author_relations.search_phd_candidate(criteria='either')\n",
-    "\n",
-    "    # Find potential supervisors among the contributors\n",
-    "    author_relations.collect_supervision_metadata()\n",
-    "\n",
-    "    # Get the OpenAlex ID pairs\n",
-    "    results = author_relations.get_results()\n",
-    "    print(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Specify PhD matching criterion\n",
     "criterion=\"either\"\n",
     "\n",
@@ -246,7 +207,7 @@
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row\n",
-    "extraction_series = pubs_df.progress_apply(\n",
+    "extraction_series = pubs_unabbrev_df.progress_apply(\n",
     "    find_phd_and_supervisors_in_row,\n",
     "    axis=1,\n",
     "    args=(criterion,) # PhD matching criterion\n",
