Plot matched contributors

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -53,11 +53,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify PhD matching criterion\n",
+    "criterion=\"either\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
     "#NROWS = 25 # Quick test\n",
     "NROWS = 2000 # The biomedical subset had 1856 phds, but let's keep the change\n",
-    "#NROWS = None # Full dataset"
+    "#NROWS = None # Full dataset\n",
+    "\n",
+    "if NROWS == None:\n",
+    "    output_filename = 'data/output/matched_pairs_full.csv'\n",
+    "else:\n",
+    "    output_filename = f'data/output/matched_pairs_{NROWS}_rows.csv'"
    ]
   },
   {
@@ -81,7 +96,7 @@
     "# mode 2 reloads before execution of every cell\n",
     "%autoreload 2\n",
     "\n",
-    "# limit the number of rows that are shown with printing dataframes\n",
+    "# limit the number of rows that are shown with printing data frames\n",
     "pd.set_option('display.max_rows', 5)"
    ]
   },
@@ -200,9 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify PhD matching criterion\n",
-    "criterion=\"either\"\n",
-    "\n",
     "# set the dict to overwrite the default class attribute specified in src/open_alex_helpers.py\n",
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
@@ -216,7 +228,7 @@
     "# Concatenate all DataFrames into one\n",
     "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
     "\n",
-    "extraction_df.to_csv('data/output/matched_pairs.csv', index=False)\n",
+    "extraction_df.to_csv(output_filename, index=False)\n",
     "\n",
     "extraction_df"
    ]
@@ -234,17 +246,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the extraction dataset from file in case we didn't run the extraction\n",
+    "if 'extraction_df' not in locals() and 'extraction_df' not in globals():\n",
+    "    file_path = output_filename\n",
+    "    \n",
+    "    # Check if the file exists\n",
+    "    if path.exists(file_path):\n",
+    "        extraction_df = pd.read_csv(file_path)\n",
+    "        print(f\"Read `extraction_df` from {file_path}\")\n",
+    "    else:\n",
+    "        raise FileNotFoundError(f\"File not found: {file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Ensure only one row per PhD for counting how they were confirmed\n",
-    "count_df = extraction_df[['phd_name', 'phd_match_by']].drop_duplicates(subset='phd_name')\n",
+    "count_phds_df = extraction_df[['phd_name', 'phd_match_by']].drop_duplicates(subset='phd_name')\n",
+    "\n",
+    "n_phds = len(count_phds_df)\n",
+    "n_confirmed_phds = len(count_phds_df.query('phd_match_by.notna()'))\n",
     "\n",
     "# Replace NaN in 'phd_match_by' with 'Not confirmed'\n",
-    "count_df['phd_match_by'] = count_df['phd_match_by'].fillna('Not confirmed')\n",
+    "count_phds_df['phd_match_by'] = count_phds_df['phd_match_by'].fillna('Not confirmed')\n",
     "\n",
     "# Count how many PhDs per match type\n",
-    "match_counts = count_df['phd_match_by'].value_counts()\n",
+    "match_phds_counts = count_phds_df['phd_match_by'].value_counts()\n",
     "\n",
     "# Create a bar plot\n",
-    "ax = match_counts.plot(kind='bar')\n",
+    "ax = match_phds_counts.plot(kind='bar')\n",
+    "\n",
+    "# Add count labels on top of each bar\n",
+    "ax.bar_label(ax.containers[0], label_type='edge')\n",
     "\n",
     "# Add a legend specifying the matching criterion\n",
     "ax.legend([f'PhD matching by \"{criterion}\"'], loc=\"upper right\")\n",
@@ -252,10 +288,42 @@
     "# Add labels and title for clarity\n",
     "plt.xlabel(\"Match Type\")\n",
     "plt.ylabel(\"Number of PhDs\")\n",
-    "plt.title(\"PhD Matching Confirmation by Type\")\n",
+    "plt.suptitle(\"PhD Matching Confirmation by Type\",fontsize=12) # title\n",
+    "plt.title(f\"Confirmed {n_confirmed_phds} out of {n_phds} PhDs. That is {round(n_confirmed_phds/n_phds*100, 2)}%\", fontsize=10) # subtitle\n",
     "\n",
     "# Display the plot\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter out rows where 'phd_id' is Na, so that we only look at PhDs we could confirm\n",
+    "count_contrib_df = extraction_df.query('phd_id.notna()')[['contributor_name', 'sup_match_by']]\n",
+    "\n",
+    "# Replace NaN in 'sup_match_by' with 'Not confirmed'\n",
+    "count_contrib_df['sup_match_by'] = count_contrib_df['sup_match_by'].fillna('Not confirmed')\n",
+    "\n",
+    "# Count how many contributors per match type\n",
+    "match_contrib_counts = count_contrib_df['sup_match_by'].value_counts()\n",
+    "\n",
+    "# Create a bar plot\n",
+    "ax = match_contrib_counts.plot(kind='bar', color='#FFD54F')\n",
+    "\n",
+    "# Add count labels on top of each bar\n",
+    "ax.bar_label(ax.containers[0], label_type='edge')\n",
+    "\n",
+    "# Add labels and title for clarity\n",
+    "plt.xlabel(\"Match Type\")\n",
+    "plt.ylabel(\"Number of contributors\")\n",
+    "plt.suptitle(\"Contributor Matching Confirmation by Type\", fontsize=12) # title\n",
+    "plt.title(f\"Only considering the {n_confirmed_phds} PhDs we could confirm\", fontsize=10) # subtile\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()"
    ]
   }
  ],
