Allow running plotting cells without running the extraction first on an existing dataset

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -66,8 +66,11 @@
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
     "#NROWS = 25 # Quick test\n",
-    "NROWS = 2000 # The biomedical subset had 1856 phds, but let's keep the change\n",
-    "#NROWS = None # Full dataset\n",
+    "#NROWS = 2573 # The biomedical subset had 2573 phds\n",
+    "NROWS = None # Full dataset\n",
+    "\n",
+    "use_dataset = 'biomedical_5y'\n",
+    "#use_dataset = None # general dataset\n",
     "\n",
     "if NROWS == None:\n",
     "    output_filename = 'data/output/matched_pairs_full.csv'\n",
@@ -146,16 +149,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pubs_df = pd.read_csv('data/cleaned/pubs.csv')\n",
+    "if use_dataset == 'biomedical_5y':\n",
+    "    # biomedical subset\n",
+    "    pubs_df = pd.read_csv('data/cleaned/pubs_biomedical5y.csv')\n",
+    "    print(\"this one\")\n",
+    "else:\n",
+    "    # general dataset\n",
+    "    pubs_df = pd.read_csv('data/cleaned/pubs.csv')\n",
     "\n",
     "# Take a sample\n",
+    "\n",
     "if NROWS == None:\n",
     "    n_sample = len(pubs_df)\n",
     "else:\n",
     "    n_sample = NROWS\n",
-    "    \n",
+    "\n",
     "pubs_df = pubs_df.sample(n=n_sample, random_state=42).reset_index(drop=True)\n",
-    "    \n",
+    "\n",
     "pubs_df"
    ]
   },
