Add comment on contributor matching

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -54,7 +54,9 @@
    "outputs": [],
    "source": [
     "# Specify PhD matching criterion\n",
-    "criterion=\"either\""
+    "criterion=\"either\"\n",
+    "\n",
+    "# the contributor matching criterion right now is hard-coded to same 'institution at graduation'"
    ]
   },
   {
@@ -66,11 +68,11 @@
     "# Number of rows to read of the full dataset.\n",
     "# None for all\n",
     "#NROWS = 25 # Quick test\n",
-    "#NROWS = 2573 # The biomedical subset had 2573 phds\n",
+    "NROWS = 2573 # The biomedical subset had 2573 phds\n",
     "NROWS = None # Full dataset\n",
     "\n",
-    "use_dataset = 'biomedical_5y'\n",
-    "#use_dataset = None # general dataset\n",
+    "#use_dataset = 'biomedical_5y'\n",
+    "use_dataset = None # general dataset\n",
     "\n",
     "if NROWS == None:\n",
     "    output_filename = 'data/output/matched_pairs_full.csv'\n",
