Implement a simple backoff with wrapper classes around Authors and Works

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -13,10 +13,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
+    "from src.open_alex_helpers import AuthorRelations, AuthorsWithRetry, WorksWithRetry, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "\n",
-    "from pyalex import Works\n",
+    "from pyalex import Authors, Works\n",
     "from src.io_helpers import remove_commas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Automatically reloads any modules that are imported, \n",
+    "# so that any changes made to the module files are reflected # without needing to restart the Jupyter kernel.\n",
+    "# load autoreload module\n",
+    "%load_ext autoreload\n",
+    "# mode 1 reloads only when an import statement is called. For production\n",
+    "# mode 2 reloads before execution of every cell\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verify that the Classes AuthorWithRetries and WorksWithRetry behave the same as the original Authors and Works pyalex classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidates_with_retry = AuthorsWithRetry().search(\"John Doe\").get()\n",
+    "\n",
+    "candidates = Authors().search(\"John Doe\").get()\n",
+    "\n",
+    "# Check if the results are the same\n",
+    "if [dict(c) for c in candidates_with_retry] == [dict(c) for c in candidates]:\n",
+    "    print(\"Both results match at the data level.\")\n",
+    "else:\n",
+    "    print(\"The results differ.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "works_with_retry = WorksWithRetry().filter(author={\"id\": \"https://openalex.org/A1234\"}).get()\n",
+    "\n",
+    "works = Works().filter(author={\"id\": \"https://openalex.org/A1234\"}).get()\n",
+    "\n",
+    "# Check if the results are the same \n",
+    "if [dict(w) for w in works_with_retry] == [dict(w) for w in works]:\n",
+    "    print(\"Both results at the data level.\")\n",
+    "else:\n",
+    "    print(\"The results differ.\")"
    ]
   },
   {
@@ -77,7 +133,7 @@
     "\n",
     "print(title_clean)\n",
     "\n",
-    "results = Works().search_filter(title=title_clean).get()\n",
+    "results = WorksWithRetry().search_filter(title=title_clean).get()\n",
     "\n",
     "results"
    ]
