Run extraction on subset

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -69,7 +69,7 @@
     "# None for all\n",
     "#NROWS = 25 # Quick test\n",
     "NROWS = 2573 # The biomedical subset had 2573 phds\n",
-    "NROWS = None # Full dataset\n",
+    "#NROWS = None # Full dataset\n",
     "\n",
     "#use_dataset = 'biomedical_5y'\n",
     "use_dataset = None # general dataset\n",
