Add ipywidget to select subset

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -42,9 +42,28 @@
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
     "from src.io_helpers import remove_commas\n",
     "from src.clean_names_helpers import format_name_to_lastname_firstname\n",
+    "from src.config_selector import get_dataset_selector\n",
     "\n",
     "# Initialize tqdm for progress bars\n",
     "tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the selector widget\n",
+    "selector = get_dataset_selector()\n",
+    "\n",
+    "# Display the dropdown menu\n",
+    "selector.display()\n",
+    "\n",
+    "# Access the selected configuration values\n",
+    "NROWS = selector.NROWS\n",
+    "use_dataset = selector.use_dataset\n",
+    "output_filename = selector.output_filename"
    ]
   },
   {
@@ -57,27 +76,6 @@
     "criterion=\"either\"\n",
     "\n",
     "# the contributor matching criterion right now is hard-coded to same 'institution at graduation'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Number of rows to read of the full dataset.\n",
-    "# None for all\n",
-    "#NROWS = 25 # Quick test\n",
-    "NROWS = 2573 # The biomedical subset had 2573 phds\n",
-    "#NROWS = None # Full dataset\n",
-    "\n",
-    "#use_dataset = 'biomedical_5y'\n",
-    "use_dataset = None # general dataset\n",
-    "\n",
-    "if NROWS == None:\n",
-    "    output_filename = 'data/output/matched_pairs_full.csv'\n",
-    "else:\n",
-    "    output_filename = f'data/output/matched_pairs_{NROWS}_rows.csv'"
    ]
   },
   {
@@ -151,6 +149,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if NROWS == None:\n",
+    "    output_filename = 'data/output/matched_pairs_full.csv'\n",
+    "else:\n",
+    "    output_filename = f'data/output/matched_pairs_{NROWS}_rows.csv'\n",
+    "\n",
     "if use_dataset == 'biomedical_5y':\n",
     "    # biomedical subset\n",
     "    pubs_df = pd.read_csv('data/cleaned/pubs_biomedical5y.csv')\n",
