Fix the subset selector widget and create a dataset for the phds we could not confirm. Closes #24

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -54,16 +54,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the selector widget\n",
+    "# Create and display the selector\n",
     "selector = get_dataset_selector()\n",
-    "\n",
-    "# Display the dropdown menu\n",
-    "selector.display()\n",
-    "\n",
-    "# Access the selected configuration values\n",
+    "selector.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NROWS = selector.NROWS\n",
     "use_dataset = selector.use_dataset\n",
-    "output_filename = selector.output_filename"
+    "output_filename = selector.output_filename\n",
+    "\n",
+    "print(f\"Now using dataset: {use_dataset} with NROWS={NROWS}\")"
    ]
   },
   {
@@ -252,7 +258,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualization"
+    "## 4. Analysis and Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the extraction dataset from file in case we didn't run the extraction"
    ]
   },
   {
@@ -261,7 +274,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the extraction dataset from file in case we didn't run the extraction\n",
     "if 'extraction_df' not in locals() and 'extraction_df' not in globals():\n",
     "    file_path = output_filename\n",
     "    \n",
@@ -271,6 +283,35 @@
     "        print(f\"Read `extraction_df` from {file_path}\")\n",
     "    else:\n",
     "        raise FileNotFoundError(f\"File not found: {file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get PhDs that we could not find in OpenAlex."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Filter extraction_df for rows with phd_id = NaN\n",
+    "extraction_none_df = extraction_df.query(\"phd_id != phd_id\")\n",
+    "\n",
+    "# Step 2: Filter pubs_unabbrev_df for matching phd_names; then sort and export\n",
+    "pubs_phd_not_confirmed_df = (\n",
+    "    pubs_unabbrev_df\n",
+    "    .query(\"phd_name in @extraction_none_df.phd_name\")\n",
+    "    .sort_values(by=[\"year\", \"institution\"])   # sort by multiple columns\n",
+    ")\n",
+    "\n",
+    "# Export to CSV without the DataFrame index\n",
+    "pubs_phd_not_confirmed_df.to_csv(\"data/output/phds_not_confirmed.csv\", index=False)\n",
+    "\n",
+    "pubs_phd_not_confirmed_df\n"
    ]
   },
   {
