Minor fix in main notebook

--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -163,7 +163,6 @@
     "if use_dataset == 'biomedical_5y':\n",
     "    # biomedical subset\n",
     "    pubs_df = pd.read_csv('data/cleaned/pubs_biomedical5y.csv')\n",
-    "    print(\"this one\")\n",
     "else:\n",
     "    # general dataset\n",
     "    pubs_df = pd.read_csv('data/cleaned/pubs.csv')\n",
@@ -282,7 +281,9 @@
     "        extraction_df = pd.read_csv(file_path)\n",
     "        print(f\"Read `extraction_df` from {file_path}\")\n",
     "    else:\n",
-    "        raise FileNotFoundError(f\"File not found: {file_path}\")"
+    "        raise FileNotFoundError(f\"File not found: {file_path}\")\n",
+    "    \n",
+    "extraction_df"
    ]
   },
   {
