--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "from src.unabbreviate_institutions import unabbreviate_institutions\n",
     "from src.open_alex_helpers import AuthorRelations, find_phd_and_supervisors_in_row, get_supervisors_openalex_ids\n",
-    "from src.io_helpers import remove_commas\n",
+    "from src.io_helpers import remove_illegal_title_characters\n",
     "from src.clean_names_helpers import format_name_to_lastname_firstname\n",
     "from src.config_selector import get_dataset_selector\n",
     "\n",
@@ -180,6 +180,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need some additional data preparation and cleaning to make sure the dataset interacts well with OpenAlex."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -189,9 +196,9 @@
     "pubs_unabbrev_df = unabbreviate_institutions(pubs_df, 'institution')\n",
     "pubs_unabbrev_df\n",
     "\n",
-    "# remove illegal characters from title\n",
-    "pubs_unabbrev_df[\"title\"] = pubs_unabbrev_df[\"title\"].apply(remove_commas)\n",
-    "pubs_unabbrev_df"
+    "# remove illegal characters from title that could trip up the API\n",
+    "pubs_unabbrev_df[\"title\"] = pubs_unabbrev_df[\"title\"].apply(remove_illegal_title_characters)\n",
+    "pubs_unabbrev_df\n"
    ]
   },
   {
