--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -73,18 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Specify PhD matching criterion\n",
-    "criterion=\"either\"\n",
-    "\n",
-    "# the contributor matching criterion right now is hard-coded to same 'institution at graduation'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,11 +223,7 @@
     "AuthorRelations.supervisors_in_pilot_dataset = supervisors_in_pilot_dataset\n",
     "\n",
     "# Apply the function to each row\n",
-    "extraction_series = pubs_unabbrev_df.progress_apply(\n",
-    "    find_phd_and_supervisors_in_row,\n",
-    "    axis=1,\n",
-    "    args=(criterion,) # PhD matching criterion\n",
-    ")\n",
+    "extraction_series = pubs_unabbrev_df.progress_apply(find_phd_and_supervisors_in_row, axis=1)\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
     "extraction_df = pd.concat(list(extraction_series), ignore_index=True)\n",
@@ -335,9 +319,6 @@
     "# Add count labels on top of each bar\n",
     "ax.bar_label(ax.containers[0], label_type='edge')\n",
     "\n",
-    "# Add a legend specifying the matching criterion\n",
-    "ax.legend([f'PhD matching by \"{criterion}\"'], loc=\"upper right\")\n",
-    "\n",
     "# Add labels and title for clarity\n",
     "plt.xlabel(\"Match Type\")\n",
     "plt.ylabel(\"Number of PhDs\")\n",
@@ -382,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
