--- a/Open_Alex_Match.ipynb
+++ b/Open_Alex_Match.ipynb
@@ -301,32 +301,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ensure only one row per PhD for counting how they were confirmed\n",
-    "count_phds_df = extraction_df[['phd_name', 'phd_match_by']].drop_duplicates(subset='phd_name')\n",
+    "# Ensure one row per PhD by dropping duplicate names\n",
+    "count_phds_df = extraction_df[\n",
+    "    ['phd_name', 'phd_id', 'phd_match_by', 'affiliation_match', 'exact_match']\n",
+    "].drop_duplicates(subset='phd_name')\n",
     "\n",
     "n_phds = len(count_phds_df)\n",
-    "n_confirmed_phds = len(count_phds_df.query('phd_match_by.notna()'))\n",
     "\n",
-    "# Replace NaN in 'phd_match_by' with 'Not confirmed'\n",
-    "count_phds_df['phd_match_by'] = count_phds_df['phd_match_by'].fillna('Not confirmed')\n",
+    "# Fix downcasting warning by calling infer_objects after fillna for the matching columns\n",
+    "count_phds_df['affiliation_match'] = (\n",
+    "    count_phds_df['affiliation_match']\n",
+    "    .fillna(False)\n",
+    ")\n",
+    "count_phds_df['exact_match'] = (\n",
+    "    count_phds_df['exact_match']\n",
+    "    .fillna(False)\n",
+    ")\n",
     "\n",
-    "# Count how many PhDs per match type\n",
-    "match_phds_counts = count_phds_df['phd_match_by'].value_counts()\n",
+    "# Function to assign a match category based on the flags and phd_id\n",
+    "def determine_category(row):\n",
+    "    # PhD not found if phd_id is empty or NaN\n",
+    "    if pd.isna(row['phd_id']) or row['phd_id'] == '':\n",
+    "        return 'Not found'\n",
+    "    # If a PhD was found but not confirmed (i.e. no match information)\n",
+    "    elif pd.isna(row['phd_match_by']):\n",
+    "        return 'Not confirmed'\n",
+    "    else:\n",
+    "        # Confirmed PhDs: split by exact and affiliation match\n",
+    "        if not row['exact_match'] and not row['affiliation_match']:\n",
+    "            return 'Fuzzy only'\n",
+    "        elif not row['exact_match'] and row['affiliation_match']:\n",
+    "            return 'Fuzzy + affiliation'\n",
+    "        elif row['exact_match'] and not row['affiliation_match']:\n",
+    "            return 'Exact only'\n",
+    "        elif row['exact_match'] and row['affiliation_match']:\n",
+    "            return 'Exact + affiliation'\n",
+    "        else:\n",
+    "            return 'Other'\n",
     "\n",
-    "# Create a bar plot\n",
-    "ax = match_phds_counts.plot(kind='bar')\n",
+    "# Apply the categorization function to create a new column\n",
+    "count_phds_df['match_category'] = count_phds_df.apply(determine_category, axis=1)\n",
     "\n",
-    "# Add count labels on top of each bar\n",
+    "# Count the number of PhDs per match category\n",
+    "match_counts = count_phds_df['match_category'].value_counts()\n",
+    "\n",
+    "# Calculate number of confirmed PhDs (those falling into the four confirmed categories)\n",
+    "confirmed_categories = ['Fuzzy only', 'Fuzzy + affiliation', 'Exact only', 'Exact + affiliation']\n",
+    "n_confirmed_phds = count_phds_df['match_category'].isin(confirmed_categories).sum()\n",
+    "\n",
+    "# Create a bar plot of the categories\n",
+    "ax = match_counts.plot(kind='bar')\n",
     "ax.bar_label(ax.containers[0], label_type='edge')\n",
     "\n",
-    "# Add labels and title for clarity\n",
-    "plt.xlabel(\"Match Type\")\n",
+    "# Set labels and titles for clarity\n",
+    "plt.xlabel(\"Match Category\")\n",
     "plt.ylabel(\"Number of PhDs\")\n",
-    "plt.suptitle(\"PhD Matching Confirmation by Type\",fontsize=12) # title\n",
-    "plt.title(f\"Confirmed {n_confirmed_phds} out of {n_phds} PhDs. That is {round(n_confirmed_phds/n_phds*100, 2)}%\", fontsize=10) # subtitle\n",
+    "plt.suptitle(\"PhD Matching Confirmation by Category\", fontsize=12)\n",
+    "plt.title(f\"Confirmed {n_confirmed_phds} out of {n_phds} PhDs\", fontsize=10)\n",
     "\n",
     "# Display the plot\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
